--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon SSS Inc.</title>
 </head>
 
 <body>
-    <section class="header">
+    <section id="header" title="Business Meeting Image">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -34,7 +34,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="ORM Laptop Graph Image" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="ORM Laptop Graph Image" id="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -48,7 +48,7 @@
             </p>
         </section>
     </main>
-    <section class="benefits">
+    <section id="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Grinding to Money Icon"/>
@@ -71,8 +71,8 @@
             </p>
         </article>
     </section>
-    <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer id="footer">
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
