added comments to divide sections of HTML in the index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- HTML for the header and navigation bar at the top of the webpage --> 
     <section id="header" title="Business Meeting Image">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,7 +25,9 @@
             </ul>
         </nav>
     </section>
+     <!-- HTML for the large background image beneath the header and nav bar --> 
     <figure id="hero"></figure>
+     <!-- HTML for the main three sections of the webpage --> 
     <main class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Journal and Coffee Image" class="float-left" />
@@ -48,6 +51,7 @@
             </p>
         </section>
     </main>
+     <!-- HTML for the side bar on the right side of the webpage --> 
     <section id="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +75,7 @@
             </p>
         </article>
     </section>
+     <!-- HTML for the footer at the bottom of the page --> 
     <footer id="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
