--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <figure id="hero"></figure>
      <!-- HTML for the main three sections of the webpage --> 
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Journal and Coffee Image" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
