--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
     <figure id="hero"></figure>
      <!-- HTML for the main three sections of the webpage --> 
     <main class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="main-page-content">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Journal and Coffee Image" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="main-page-content">
             <img src="./assets/images/online-reputation-management.jpg" alt="ORM Laptop Graph Image" id="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="main-page-content">
             <img src="./assets/images/social-media-marketing.jpg" alt="Collaborative Colleagues Image" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -53,21 +53,21 @@
     </main>
      <!-- HTML for the side bar on the right side of the webpage --> 
     <section id="benefits">
-        <article class="benefit-lead">
+        <article class="side-bar">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Grinding to Money Icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-        <article class="benefit-brand">
+        <article class="side-bar">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Lightbulb in a Suit Icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-        <article class="benefit-cost">
+        <article class="side-bar">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Grinding and Coins Icon"/>
             <p>
